[metadata]
name = mlog_extended
version = 0.0.7
author = UMRnInside
author_email = 30196401+UMRnInside@users.noreply.github.com
description = Extended Mindustry logic and its compiler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UMRnInside/MlogExtended
project_urls = 
    Bug Tracker = https://github.com/UMRnInside/MlogExtended/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
exclude = 
    tests
    docs
